# 0.00.63 (63725) Apr 24, 2012
Matching Game: switched from MatchingGameCanvas to ClientMatchingGameCanvas to improve performance, see #3314
Intro tab: Only update and render views when visible, see #3314
Intro tab: Added developer menu items for debugging performance, see #3314
Intro tab: Improved performance for cake slice dirty rectangles, see #3314
Intro tab: Fixed performance in PieSetContentNode for dirty rectangles, see #3314 [63694]
# 0.00.62 (63618) Apr 19, 2012
Matching Game: Added interleaved L-shape
Matching Game: Added 6-star
# 0.00.61 (63609) Apr 18, 2012
Matching Game: Added L-shaped diagonal
Matching Game: Added tetris pieces
Matching Game: Added random fill at higher levels
Matching Game: Added scaled representations at levels 5-6
Matching Game: Improved scoreboard layout and smilie face size
# 0.00.60 (63599) Apr 18, 2012
Isolate instantiation of regression tests
Fixes for the game over dialog
Hide the timer if not selected in the settings dialog
Added timer to scoreboard
# 0.00.59 (63576) Apr 18, 2012
Added a flag to disable function recorder
Matching Game: Show the current level and a menu button
Matching Game: Added object ID's and test for rendering strategy
Matching Game: Keep track of score
Matching Game: Improved game over handling
Matching Game: Added a game over dialog
Matching Game: Fixed: User shouldn't be able to interact with any fractions while showing clues or correct answer
Matching Game: Improved "next" behavior
Matching Game: Animate to the correct answer
Matching Game: Fixed: buttons don't appear for the left scale
Matching Game: Fixed bugs in button enable/disable when autospin + max/min reached
Matching Game: Show a smilie face and score readout when checking the answer and it is right
Matching Game: Play audio for right/wrong answers
Matching Game: After getting it wrong, hide the "check answer" button until they remove something from the platform or put something else up there.